--- a/index.css
+++ b/index.css
@@ -170,6 +170,7 @@
         border-top: 1px solid #dedede;
         border-right: 1px solid #dedede;
         padding: 10px;
+		background-color:#444;
       }
 
       .product-content {
@@ -182,7 +183,8 @@
         align-items: center;
         justify-content: space-between;
         transition: 0.15s ease;
-        background-color: #FFF;
+        background-color: #444 !important;
+		color:#f5f5f5 !important;
       }
 
       .product-action {
